# ds-analytics

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  fix-permissions.sh
.devcontainer/build-faiss/: .gitignore  COMPARISON.md  Dockerfile  README.md  build-cuvs.sh  build.sh  fix-setup.py  quick-build.sh  repair-wheel.py  test-integration.py
notebooks/: 00_sanity_check.ipynb  00_sanity_gpu.ipynb
notebooks/00/: 00_sanity_check.ipynb
tests/: test_sanity.py
