[project]
name = "ml-env"
version = "0.1.0"
description = "Enterprise ML env (Py3.13, CUDA 13, RAPIDS 25.12, VS Code Dev Containers, GAR)"
requires-python = ">=3.13"
dependencies = [
  "numpy",
  "scipy",
  "pandas",
  "scikit-learn",
  "matplotlib",
  "seaborn",
  "plotly",
  "jupyterlab",
  "ipykernel",
  "tqdm",
  "pyyaml",
  "rich",
  "ruff",
  "pytest",
  "pytest-cov",
  "requests",
  "xgboost",
  "optuna",
  "transformers",
  "streamlit",
  "onnx",
  "onnxruntime",
  "pyspark"
]

[dependency-groups]
dev = ["pytest", "pytest-cov", "ruff", "pre-commit"]

[tool.ruff]
line-length = 100
cache-dir = "/tmp/.ruff_cache"

[tool.ruff.lint]
ignore = ["F401"]  # Ignore unused imports
per-file-ignores = {"notebooks/**" = ["F401"]}  # Allow unused imports in notebooks

[tool.coverage.run]
data_file = "/tmp/.coverage"
parallel = false

[tool.bandit]
exclude_dirs = ["tests", ".git", "__pycache__", ".venv"]
skips = ["B101", "B601"]  # Skip assert checks and shell usage warnings for data science code
